@@ -107,6 +107,7 @@ scale_y_probit <- ScaleProbit$build_accessor(list(variable = "\"y\""))
 scale_y_reverse <- ScaleReverse$build_accessor(list(variable = "\"y\""))
 scale_y_sqrt <- ScaleSqrt$build_accessor(list(variable = "\"y\""))
 scale_z_discrete <- ScaleDiscretePosition$build_accessor(list(variable = "\"z\""))
+stat_abline <- StatAbline$build_accessor()
 stat_bin <- StatBin$build_accessor()
 stat_bin2d <- StatBin2d$build_accessor()
 stat_binhex <- StatBinhex$build_accessor()
